--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,9 @@ allprojects {
     repositories {
         jcenter()
         mavenCentral()
+        maven {
+            url "https://jitpack.io"
+        }
     }
 }
 
