--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,6 +13,8 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
+        buildConfigField 'String', 'BASE_URL', BASE_URL
     }
     buildTypes {
         release {
@@ -44,8 +46,9 @@ dependencies {
     compile 'com.android.support:support-v4:25.2.0'
     compile 'com.android.support:support-annotations:25.2.0'
 
-    // Kotlin Standard Library
+    // Kotlin
     compile "org.jetbrains.kotlin:kotlin-stdlib:1.1.0"
+    compile "org.jetbrains.kotlin:kotlin-reflect:1.1.0"
 
     // Anko
     compile "org.jetbrains.anko:anko-sdk15:+"
@@ -57,7 +60,7 @@ dependencies {
 
     // Dagger 2
     compile 'com.google.dagger:dagger:2.9'
-    annotationProcessor 'com.google.dagger:dagger-compiler:2.9'
+    kapt 'com.google.dagger:dagger-compiler:2.9'
 
     // Gson
     compile 'com.google.code.gson:gson:2.8.0'
